# numerical_methods

./: .gitignore  CMakeLists.txt  README.md  build-tests.sh  package.xml  run-tests.sh
include/numerical-methods/: common-definitions.h  eigen-utility-functions.h
include/numerical-methods/direct-search/: direct-search-method.h  nelder-mead-method.h
include/numerical-methods/integration/: integration-method.h  log-tanh-sinh-method.h  tanh-sinh-method.h
include/numerical-methods/minimization/: minimization-method.h  nelder-mead-method.h
include/numerical-methods/optimization/: nelder-mead-method.h  optimization-method.h
include/numerical-methods/special-functions/: incomplete-beta-function.h  special-function.h
include/numerical-methods/utility/: incremental-statistics.h  linear-model.h
src/: numerical-methods.cc
test/: test-direct-search-methods.cc  test-incremental-statistics.cc  test-integration-methods.cc  test-linear-model.cc  test-linear-model.h  test-log-integration-methods.cc  test-minimization-methods.cc  test-optimization-methods.cc  test-special-functions.cc
test/utility/: test-incremental-statistics.cc
